public/assets/backend/css/custom.css
/* ... */
.toast-body {
	color: #fff;
	border-radius: 0px 0px 8px 8px;
	padding: 0px 14px 14px 14px;
}
.toast-header .btn-close {
	width: 20px;
	height: 10px;
	padding: 0px 1px;
	filter: invert(1);
}

.toast {
    border-radius: 10px;
}

.toast-header {
    color: #fff;
    border-radius: 8px 8px 0px 0px;
    border-bottom: none;
}

.toast-header .btn-close {
    width: 20px;
    height: 10px;
    padding: 0px 1px;
    filter: invert(1);
}

.toast-body {
    color: #fff;
    border-radius: 0px 0px 8px 8px;
    padding: 0px 14px 14px 14px;
}

.toast.success .toast-header,
.toast.success .toast-body {
    background-color: #13a96c;
}

.toast.warning .toast-header,
.toast.warning .toast-body {
    background-color: rgb(229 153 40);
}

.toast.error .toast-header,
.toast.error .toast-body {
    background-color: rgb(255 85 119);
}
.paging_full_numbers .drp-buttons .applyBtn.btn-primary, 
.paging_full_numbers .active > .page-link, .page-link.active {
	font-size: 16px;
    border-radius: 5px;
}
.paging_full_numbers .disabled > .page-link, 
.paging_full_numbers .page-link.disabled {
	font-size: 16px;
	margin: 0 8px;
    border-radius: 5px !important;
}
.paging_full_numbers .page-item:first-child .page-link {
	border-radius: 0;
	margin-right: 0 !important;
}
.icon img {
    height: 54px !important;
    width: 100% !important;
    margin-bottom: 5px;
    object-fit: contain;
}
.sidebar-first-li.active span svg path{
    fill: #1b84ff;
} 
.sidebar-first-li:hover span svg path{
    fill: #1b84ff;
}

.img-text-select .eSvgs {
	height: 28px !important;
	width: 28px;
	line-height: 24px !important;
	text-align: center;
	border-radius: 50%;
	font-size: 15px;
	border: 1px solid #DBDFEB;
	background-color: #fff;
	display: inline-block;
}
.img-text-select .selected-show{
    position: relative;
    z-index: 1;
}
.img-text-select .selected-show::before {
	position: absolute;
	content: '';
	height: 24px;
	width: 50px;
	border-radius: 10px;
	border: 1px solid #DBDFEB;
	z-index: -1;
}
.img-text-select .selected-show::after {
	right: 7px;
}
.drp-buttons .applyBtn.btn-primary, .active > .page-link, .page-link.active {
	margin: 0 10px;
}
.page-link {
	font-size: 16px;
	margin: 0 10px;
	border-radius: 5px;
}
.disabled > .page-link, .page-link.disabled {
	background-color: #dedede8a;
  border-color: #dedede0a;
}
.paging_full_numbers .page-item:first-child .page-link {
	margin-right: 5px !important;
	border-radius: 5px;
}
.drp-buttons .applyBtn.btn-primary, .active > .page-link, .page-link.active {
	box-shadow: none;
}
.rounded {
	object-fit: cover;
}
.outBtn {
	padding: 2px 8px !important;
	margin-left: 10px;
	width: 94% !important;
	margin-bottom: 10px;
}

